<resources>

    <string name="app_name">Game</string>

    <string name="current_score_text">Текущий счет:</string>
    <string name="high_score_text">Лучший счет:</string>

    <string name="null_score">0</string>
    <string name="null_text" />

    <string name="exit_confirm_menu_title">Уверены, что хотите выйти?</string>

    <string name="button_menu">Меню</string>
    <string name="button_confirm">Да</string>
    <string name="button_not_confirm">Нет</string>
    <string name="button_menu_start">Старт</string>
    <string name="button_menu_resume">Продолжить</string>
    <string name="button_menu_settings">Настройки</string>
    <string name="button_menu_exit">Выход</string>

    <string name="sounds">Звуки</string>
    <string name="accelerometer">Акселерометр</string>

</resources>
