<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:button="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|left">

        <com.el.game.ui.Button
            android:id="@+id/button_start_resume"
            android:layout_height="@dimen/button_height"
            android:layout_width="@dimen/button_main_menu_width"
            android:background="@android:color/transparent"
            button:gravity="left"
            button:textPaddingLeft="@dimen/menu_elements_padding"
            button:text="@string/button_menu_start" />

        <com.el.game.ui.Button
            android:id="@+id/button_settings"
            android:layout_height="@dimen/button_height"
            android:layout_width="@dimen/button_main_menu_width"
            android:background="@android:color/transparent"
            button:gravity="left"
            button:textPaddingLeft="@dimen/menu_elements_padding"
            button:text="@string/button_menu_settings" />

        <com.el.game.ui.Button
            android:id="@+id/button_exit"
            android:layout_height="@dimen/button_height"
            android:layout_width="@dimen/button_main_menu_width"
            android:background="@android:color/transparent"
            button:gravity="left"
            button:textPaddingLeft="@dimen/menu_elements_padding"
            button:text="@string/button_menu_exit" />

    </LinearLayout>

</FrameLayout>